--- a/Source/CriticalPath.Web/Views/Products/Create.cshtml
+++ b/Source/CriticalPath.Web/Views/Products/Create.cshtml
@@ -1,7 +1,7 @@
 @using CriticalPath.Web.Models
 @using CriticalPath.Data
 @using CP.i8n
-@model Product
+@model ProductCreateVM
 @{
     ViewBag.Title = EntityStrings.CreateProduct;
 }
@@ -29,6 +29,7 @@
                 @Html.ValidationMessageFor(m => m.Description, "", new { @class = "text-danger" })
             </div>
         </div>
+
         @*
             <div class="form-group">
                 @Html.LabelFor(model => model.ImageUrl, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
@@ -39,6 +40,8 @@
             </div>
         *@
         @Html.Partial("_AllPriceEdit", Model)
+        @Html.Partial("_AutoCompleteSupplier")
+                
         @Html.Partial("_SaveButtonsPartial")
     </div>
 }
